--- a/_sass/2-components/_post-share.sass
+++ b/_sass/2-components/_post-share.sass
@@ -1,6 +1,5 @@
 .post-share
-  margin-bottom: $card-margin-desktop
-  margin-top: 4rem
+  margin: 4rem 0
   display: flex
   justify-content: center
   z-index: 99
