--- a/_sass/2-components/_tags.sass
+++ b/_sass/2-components/_tags.sass
@@ -1,8 +1,8 @@
 .tags
-  margin: 4rem $card-margin-mobile 3rem
+  margin: 4rem $card-margin-mobile 2rem
 
   +grid-media($grid-medium)
-    margin: 4rem $card-margin-desktop
+    margin: 4rem $card-margin-desktop 2rem
 
   hr
     margin-top: 0
