Decrease content width and increase paragraph font size on larger screens

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -8,7 +8,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
   &--markdown
     overflow: hidden
     padding: 2rem 0
-    max-width: 900px
+    max-width: 1080px
     margin: 0 auto
 
     h1, h2, h3, h4, h5, h6
@@ -23,18 +23,8 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       +grid-media($grid-medium)
         margin: 2rem $card-margin-desktop
 
-      // &:first-of-type
-      //   margin-top: $card-margin-mobile
-
-      //   +grid-media($grid-medium)
-      //     margin-top: $card-margin-desktop
-
-      // &:last-of-type
-      //   margin-bottom: $card-margin-mobile
-
-      //   +grid-media($grid-medium)
-
-      //     margin-bottom: $card-margin-desktop
+      +grid-media($grid-large)
+        font-size: 2.2rem
 
     table, th, td
       border: $base-border
@@ -128,12 +118,8 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
           transition: $base-transition
 
     .custom-image
-      // margin: 0 auto $card-margin-mobile
       margin: 0 auto
       width: 100%
-
-      // +grid-media($grid-medium)
-        // margin: 0 auto $card-margin-desktop
 
       a
         width: 100%
@@ -149,7 +135,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
 
           +grid-media($grid-medium)
             margin-left: $card-margin-desktop
-            // margin-right: $card-margin-desktop
             margin-right: 4rem
 
           +grid-media($grid-small)
@@ -161,7 +146,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
           float: none
 
           +grid-media($grid-medium)
-            // margin-left: $card-margin-desktop
             margin-left: 4rem
             margin-right: $card-margin-desktop
 
@@ -191,7 +175,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         margin-right: $card-margin-mobile
 
         +grid-media($grid-medium)
-          // margin-right: $card-margin-desktop
           margin-right: 4rem
 
         .custom-image__caption
@@ -201,7 +184,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
 
           +grid-media($grid-medium)
             margin-left: $card-margin-desktop
-            // margin-right: $card-margin-desktop
             margin-right: 4rem
 
       &--right
@@ -209,7 +191,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         margin-left: $card-margin-mobile
 
         +grid-media($grid-medium)
-          // margin-left: $card-margin-desktop
           margin-left: 4rem
 
         .custom-image__caption
@@ -218,7 +199,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
           margin-right: $card-margin-mobile
 
           +grid-media($grid-medium)
-            // margin-left: $card-margin-desktop
             margin-left: 4rem
             margin-right: $card-margin-desktop
 
@@ -240,7 +220,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       width: 100%
       display: flex
       justify-content: center
-      // margin-bottom: $card-margin-desktop
       margin-bottom: 4rem
 
   &--post
