--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -24,7 +24,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         margin: 2rem $card-margin-desktop
 
       +grid-media($grid-large)
-        font-size: 2.2rem
+        // font-size: 2.2rem
 
     table, th, td
       border: $base-border
@@ -242,7 +242,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       border-top-right-radius: $card-border-radius
 
       +grid-media($grid-large)
-        height: 250px
+        height: 220px
 
     &__category
       position: absolute
