--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -49,27 +49,16 @@
         transition: $base-transition
 
   &__upper-title
-    font-size: 2.2rem
+    font-family: $base-font-family
     margin-bottom: 2rem
 
   &__main-title
-    font-size: 4rem
     margin: 0 0 2rem
 
-    +grid-media($grid-medium)
-      font-size: 6.4rem
+  &__sub-title
+    font-family: $base-font-family
 
 .page
   .header
     .icon-play
       opacity: .8
-
-.post
-
-  h1.header__main-title
-    font-size: 3.4rem
-    line-height: 1.1
-
-    +grid-media($grid-medium)
-      font-size: 5.2rem
-      line-height: 1.3
