--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -7,35 +7,29 @@ body, #{$all-text-inputs}, #{$all-buttons}
   font-family: $base-font-family
   line-height: $base-line-height
   color: $base-font-color
-  font-size: $base-font-size
+  font-size: $mobile-font-size
+
+  +grid-media($grid-medium)
+    font-size: $desktop-font-size
 
 h1, h2, h3, h4, h5, h6
   font-family: $display-font-family
-  line-height: $display-line-height
-
-h1
-  font-size: 3.2rem
+  line-height: $display-line-height-mobile
 
   +grid-media($grid-medium)
-    font-size: 4.2rem
+    line-height: $display-line-height-desktop
+
+h1
+  font-size: 4.2rem
+
+  +grid-media($grid-medium)
+    font-size: 5.2rem
 
 h2
   font-size: 2.8rem
 
 h3
   font-size: 2.4rem
-
-h4
-  font-size: 1.8rem
-
-h5
-  font-size: 1.8rem
-
-h6
-  font-size: 1.8rem
-
-p
-  font-size: 1.8rem
 
 strong
   font-weight: 700
