--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -25,11 +25,13 @@ $link-font-color:                         $beyond-green
 
 $document-background-color:               $whitesmoke
 
-$base-font-size:                          1.8rem
+$mobile-font-size:                        1.8rem
+$desktop-font-size:                       2rem
 $code-font-size:                          1.6rem
 
 $base-line-height:                        1.5
-$display-line-height:                     1.3
+$display-line-height-desktop:             1.3
+$display-line-height-mobile:              1.1
 
 $base-border:                             1px solid #e1e1e1
 $base-border-radius:                      4px
