--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -116,7 +116,7 @@
     &__search-input
       outline: none
       border: 0
-      font-size: $base-font-size
+      font-size: $mobile-font-size
       transition: width .2s ease-out
       width: 100%
       color: $white
@@ -125,6 +125,7 @@
       box-sizing: border-box
 
       +grid-media($grid-medium)
+        font-size: $desktop-font-size
         width: 0
         visibility: hidden
         background: transparent
