--- a/_sass/2-components/_scroll-top.sass
+++ b/_sass/2-components/_scroll-top.sass
@@ -5,7 +5,7 @@
   background-image: url(/assets/img/icons/arrow-up.svg)
   background-size: cover
   background-repeat: no-repeat
-  background-color: $whitesmoke
+  background-color: transparentize($whitesmoke, .6)
   border: 1px solid #9b9b9b
   border-radius: 4px
   position: fixed
@@ -14,12 +14,12 @@
   cursor: pointer
   -webkit-transform: translateZ(0)
 
-  +grid-media($grid-medium)
-    background-color: transparent
+  +grid-media($grid-large)
+    background-color: transparentize($whitesmoke, .9)
     width: 60px
     height: 60px
 
   &:hover
-    background-color: rgba(150,150,150,.15)
+    background-color: transparentize($whitesmoke, .8)
     transition: $base-transition
     -webkit-transition: $base-transition
