--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,6 +7,7 @@
     {% include sections/header.html %}
     <main>
       <div class="content-wrapper">
+        {% include components/search-bar.html %}
         {% include components/categories.html %}
         <div class="post-container" id="posts">
           {{ content }}
