--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,16 +20,33 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  {% if page.url == '/' %}
+    {% assign base_url = '/' %}
+  {% else %}
+    {% assign base_url = page.url | split: '/' %}
+    {% assign base_url = base_url[1] %}
+  {% endif %}
 
-    {% if page.layout == 'default' %}ga('create', 'UA-71308214-1', 'auto');{% endif %}
-    {% if page.layout == 'blog' %}ga('create', 'UA-71308214-2', 'auto');{% endif %}
-    {% if page.layout == 'devjobs' %}ga('create', 'UA-71308214-3', 'auto');{% endif %}
-    ga('send', 'pageview');
-  </script>
+  {% assign ga_paths = "['/', 'blog', 'devjobs']" %}
+
+  {% if ga_paths contains base_url %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      {% case base_url %}
+      {%- when '/' -%}
+        ga('create', 'UA-71308214-1', 'auto');
+      {%- when 'blog' -%}
+        ga('create', 'UA-71308214-2', 'auto');
+      {%- when 'devjobs' -%}
+        ga('create', 'UA-71308214-3', 'auto');
+      {% endcase %}
+
+      ga('send', 'pageview');
+    </script>
+  {% endif %}
 
 </head>
