--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -1,7 +1,7 @@
 body.default
   .card:not(.card--post)
     padding: 2rem
-    margin: 4rem -1rem
+    margin: 8rem -1rem
   .column-wrapper
     display: flex
     flex-wrap: wrap
@@ -87,13 +87,14 @@ body.default
         flex-basis: 90%
 
   .news
+    margin: 8rem 0
     text-align: center
     position: relative
     .section__title
-      margin: 2rem 0 1rem
+      margin: 0 0 1rem
     .carousel
       position: relative
-      margin: 0 -3rem 0
+      margin: 1rem -3rem 0
       text-align: left
       .card--post
         margin: 2rem
@@ -128,8 +129,8 @@ body.default
   .more
     text-align: center
     .card
-      margin-top: 2rem
       .section__title
         margin: 2rem 0 1rem
       .cta
         margin: 3rem 0 2rem
+
