--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
 
   <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
-  {% if page.url == '/' %}
+  {% if page.url == '/' or '/about/' %}
   <link rel="stylesheet" href="/assets/slick/slick.css"/>
   {% endif %}
   <link rel="stylesheet" href="/assets/css/main.css" />
