--- a/_sass/2-components/_footer.sass
+++ b/_sass/2-components/_footer.sass
@@ -1,4 +1,5 @@
 .footer
+  clear: both
   background-image: url(/assets/img/pages/footer.jpg)
   background-size: cover
   background-position: center center
