--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -114,6 +114,7 @@ body.default
       left: 0
       right: 0
       .prev, .next
+        visibility: hidden
         position: absolute
         top: 0
         font-size: 8rem
@@ -121,10 +122,20 @@ body.default
         color: lighten($gray-light, 20%)
         &.slick-disabled
           visibility: hidden
+        +grid-media($grid-medium)
+          visibility: visible
       .prev
-        left: -6rem
+        left: -4rem
+        +grid-media($grid-huge)
+          left: -5rem
+        +grid-media($grid-max)
+          left: -6rem
       .next
-        right: -6rem
+        right: -4rem
+        +grid-media($grid-huge)
+          right: -5rem
+        +grid-media($grid-max)
+          right: -6rem
 
   .more
     text-align: center
