--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,8 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
 
-  <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css"> -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
   {% if page.url == '/' %}
   <link rel="stylesheet" href="/assets/slick/slick.css"/>
   {% endif %}
