--- a/_sass/3-pages/_devjobs.sass
+++ b/_sass/3-pages/_devjobs.sass
@@ -10,6 +10,10 @@
     .section__title
       margin-bottom: 1rem
 
+
+
+
+
   .job-openings
 
     .card-wrapper
@@ -53,6 +57,10 @@
           color: $gray-light
           position: absolute
           bottom: 2rem
+
+
+
+
 
   .contact
 
@@ -110,11 +118,8 @@
     &__option
       display: flex
 
-      .fa
+      svg
         margin-right: 2rem
-        font-size: 2.5rem
-        width: 3rem
-        text-align: center
 
         &-comment
           margin-right: 2.7rem
@@ -134,6 +139,10 @@
 
       +grid-media($grid-huge)
         display: block
+
+
+
+
 
   .about
 
@@ -159,8 +168,7 @@
         &__title
           margin-bottom: 1rem
 
-        .fa
-          font-size: 6rem
+        svg
           margin-bottom: 3rem
           color: lighten($gray-light, 20%)
           display: block
