--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="navigation__button">
-      <img src="/assets/img/icons/menu_white.svg" alt="Menu Icon">
+      <i class="fas  fa-fw  fa-2x  fa-bars"></i>
     </div>
 
     <div class="navigation__background"></div>
