--- a/_sass/2-components/_post-share.sass
+++ b/_sass/2-components/_post-share.sass
@@ -35,11 +35,8 @@
         margin-right: 0
         margin-bottom: 1rem
 
-  .icon-share
-    display: block
-    height: 40px
-    width: 40px
+  .fa-facebook-square
+    color: $color-facebook
 
-    +grid-media($grid-max)
-      height: 50px
-      width: 50px
+  .fa-twitter-square
+    color: $color-twitter
