--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
   {% if site.data.seo.[url_base].description %}<meta name="description" content="{{ site.data.seo.[url_base].description }}">{% endif %}
   {% if site.data.seo.[url_base].keywords %}<meta name="keywords" content="{{ site.data.seo.[url_base].keywords | join: ', ' }}">{% endif %}
 
+  <meta property="og:image" content="{{ site.url }}/assets/img/pages/blog/headers/{{ page.header_image }}" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
