--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -21,5 +21,21 @@
     <script src="/assets/js/endless-scroll.js"></script>
     <script src="/assets/js/date.js"></script>
     <script src="/assets/js/scroll-top.js"></script>
+
+    <amp-analytics type="googleanalytics">
+      <script type="application/json">
+        {
+          "vars": {
+            "account": "UA-71308214-2"
+          },
+          "triggers": {
+            "trackPageview": {
+              "on": "visible",
+              "request": "pageview"
+            }
+          }
+        }
+      </script>
+    </amp-analytics>
   </body>
 </html>
