--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+
   {% if page.url == '/' %}
     {% assign base_url = '/' %}
   {% else %}
@@ -48,5 +50,4 @@
       ga('send', 'pageview');
     </script>
   {% endif %}
-
 </head>
