Change search icon

--- a/_includes/components/search-bar.html
+++ b/_includes/components/search-bar.html
@@ -1,3 +1,6 @@
 <form action="/blog/search/" method="get" class="search-form">
-  <input type="text" class="search-input" placeholder="Search for tags, keywords, etc." name="query" id="search-box">
+  <div class="input-wrapper">
+    <i class="fas  fa-fw  fa-search"></i>
+    <input type="text" class="search-input" placeholder="Search for tags, keywords, etc." name="query" id="search-box">
+  </div>
 </form>
