--- a/_sass/2-components/_search-bar.sass
+++ b/_sass/2-components/_search-bar.sass
@@ -6,15 +6,21 @@
   +grid-media($grid-medium)
     margin-bottom: 5rem
 
-.search-input
-  width: 400px
-  background-image: url(/assets/img/pages/blog/search.svg)
-  background-position: 1em
-  background-repeat: no-repeat
-  background-size: 2.3rem
-  padding: .5em 1em .5em 3em
-  background-color: $white
-  border-radius: $base-border-radius
-  box-shadow: $base-box-shadow
-  outline: none
-  border: 0
+  .input-wrapper
+    position: relative
+
+    .fa-search
+      color: $gray-light
+      position: absolute
+      left: 0
+      z-index: 1
+      padding: 1.3rem 1.5rem
+
+    .search-input
+      width: 400px
+      padding: .5em 1em .5em 3em
+      background-color: $white
+      border-radius: $base-border-radius
+      box-shadow: $base-box-shadow
+      outline: none
+      border: 0
