--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,22 +2,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" href="/assets/img/favicon.ico" sizes="32x32">
+  <link rel="icon" type="image/png" href="/assets/img/favicon.ico" sizes="32x32" />
 
   <title>{% if page.permalink == '/' %}{{ site.title }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
 
   {% capture url_base %}{{ page.url | split: '/' | second }}{% endcapture %}
-  {% if site.data.seo.[url_base].description %}<meta name="description" content="{{ site.data.seo.[url_base].description }}">{% endif %}
-  {% if site.data.seo.[url_base].keywords %}<meta name="keywords" content="{{ site.data.seo.[url_base].keywords | join: ', ' }}">{% endif %}
 
-  <meta property="og:image" content="{{ site.url }}/assets/img/pages/blog/headers/{{ page.header_image }}" />
+  {% if site.data.seo.[url_base].description %}
+  <meta name="description" content="{{ site.data.seo.[url_base].description }}" property="og:description" />
+  {% endif %}
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
+  {% if site.data.seo.[url_base].keywords %}
+  <meta name="keywords" content="{{ site.data.seo.[url_base].keywords | join: ', ' }}" />
+  {% endif %}
+
+  {% if page.header_image %}
+  <meta property="og:image" name="twitter:image" content="{{ site.url }}/assets/img/pages/blog/headers/{{ page.header_image }}" />
+  {% endif %}
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i" />
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
   {% if page.url == '/' %}
   <link rel="stylesheet" href="/assets/slick/slick.css"/>
   {% endif %}
+
   <link rel="stylesheet" href="/assets/css/main.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -32,23 +42,23 @@
   {% assign ga_paths = "['/', 'blog', 'devjobs']" %}
 
   {% if ga_paths contains base_url %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      {% case base_url %}
-      {%- when '/' -%}
-        ga('create', 'UA-71308214-1', 'auto');
-      {%- when 'blog' -%}
-        ga('create', 'UA-71308214-2', 'auto');
-      {%- when 'devjobs' -%}
-        ga('create', 'UA-71308214-3', 'auto');
-      {% endcase %}
+    {% case base_url %}
+    {%- when '/' -%}
+      ga('create', 'UA-71308214-1', 'auto');
+    {%- when 'blog' -%}
+      ga('create', 'UA-71308214-2', 'auto');
+    {%- when 'devjobs' -%}
+      ga('create', 'UA-71308214-3', 'auto');
+    {% endcase %}
 
-      ga('send', 'pageview');
-    </script>
+    ga('send', 'pageview');
+  </script>
   {% endif %}
 
 </head>
