Add signup modal and rework sections due to feedback

--- a/_sass/2-components/_modals.sass
+++ b/_sass/2-components/_modals.sass
@@ -1,4 +1,7 @@
 .modal
+  background: $card-background-color
+  border-radius: $card-border-radius
+  box-shadow: $card-box-shadow
   padding: $card-margin-mobile
   width: 900px
   max-width: 90%
