Add "Workflow tuning with Prototyping tools" post

--- a/_sass/2-components/_categories.sass
+++ b/_sass/2-components/_categories.sass
@@ -88,3 +88,10 @@
       background-color: $cat-techcomm-and-socialmedia
       border: 1px solid $cat-techcomm-and-socialmedia
       color: white
+
+  &--design
+
+    &:hover, &--active
+      background-color: $cat-design
+      border: 1px solid $cat-design
+      color: white
